--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^5.0.8",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.12.0",
