--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
