--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
 MODE_ENV='development'
-MONGO_URL=mongodb+srv://IBadella:yR6NsdkTtzIObQcF@nachocluster.ytxqvsv.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://IBadella:yR6NsdkTtzIObQcF@nachocluster.ytxqvsv.mongodb.net/?retryWrites=true&w=majority  
+MONGO_URL=mongodb://127.0.0.1:27017
 HOST=127.0.0.1
 PORT=8080
 AKMSS="coderhouse"
